# futo-notes

./: .cirrus.yml  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.full-with-windows  .gitmodules  .mcp.json.example  .prettierignore  .prettierrc  AGENTS.md  CAPACITOR_MIGRATION_PROMPT.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  ExportOptions.plist  PLAN.md  README.md  app.json  capacitor.config.ts  editor.html  eslint.config.js  font-test.html  index.html  justfile  metro.config.js  package-lock.json  package.json  playwright.config.ts  playwright.editor-embed.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts  test-hr.md  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  (+2 more)
.claude/: settings.json
.context/: codex-session-id
.githooks/: pre-commit
android/: capacitor.settings.gradle  settings.gradle
app/: _layout.tsx  build.gradle.kts  index.tsx
apps/cli/: .gitignore  AGENTS.md  Cargo.toml  Makefile  docker-compose.yml  go.mod  install.sh  main.go
apps/cli/internal/client/: client.go  client_test.go
apps/cli/internal/cmd/setup/: config.go  deploy.go  dockercheck.go  setup.go  success.go  welcome.go
apps/cli/internal/docker/: compose.go  compose_test.go  docker.go
apps/cli/internal/style/: style.go
apps/cli/src/: cli.rs  config.rs  docker.rs  main.rs  reset_password.rs  server_api.rs  settings.rs  setup.rs  status.rs  update.rs
apps/tauri/src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.android.dev-mode.conf.json  tauri.android.offline.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json  tauri.ios.dev.conf.json  tauri.macos.conf.json  tauri.prod.conf.json  tauri.updater-localdev.conf.json  tauri.windows.conf.json
apps/tauri/src-tauri/.cargo/: config.toml
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/tauri/src-tauri/src/: android_logcat.rs  application.rs  application_state.rs  background_tasks.rs  core.rs  core.rs.orig  e2ee_client.rs  filesystem_watcher.rs  folder_commands.rs  graph_clusters.rs  graph_positions.rs  image_commands.rs  legacy_filesystem_commands.rs  lib.rs  local_notes.rs  main.rs  note_commands.rs  notes.rs  panic_reporter.rs  platform_integration.rs  search.rs  search_commands.rs  sync.rs  sync_state.rs  system_trash.rs  updater_commands.rs  vault_location.rs
apps/tauri/src-tauri/src/sync/: cycle_runner.rs  frontend_contract.rs  mod.rs  password_store.rs  session_state.rs  tauri_commands.rs  tauri_events.rs
apps/tauri/src-tauri/windows/: installer-hooks.nsh
ci/: android.Dockerfile  sign-windows.sh  test.Dockerfile  win-build.ps1  win-install-deps.ps1
components/: CodeMirrorEditor.tsx  SearchBar.tsx  SwipeableNoteItem.tsx
crates/futo-notes-core/: AGENTS.md  Cargo.toml
crates/futo-notes-core/src/: conflict_names.rs  e2ee.rs  files.rs  graph.rs  hash.rs  image.rs  invariants.rs  lib.rs  merge.rs  search.rs  sync.rs
crates/futo-notes-core/src/e2ee/: cipher.rs  mod.rs  note_frame.rs  password_key.rs  vault_key.rs
crates/futo-notes-core/src/files/: atomic_write.rs  blob_file.rs  filenames.rs  mod.rs  parked_backup.rs  paths.rs  timestamps.rs
crates/futo-notes-core/tests/: adversarial.rs  path_safety_conformance.rs  public_contract.rs  sync_cycle.rs
crates/futo-notes-ffi/: Cargo.toml
crates/futo-notes-ffi/src/: lib.rs
crates/futo-notes-ffi/src/notes/: contract.rs  mod.rs  rules.rs  store.rs
crates/futo-notes-ffi/src/sync/: client.rs  contract.rs  events.rs  mod.rs
crates/futo-notes-ffi/tests/: note_contract.rs  sync_contract.rs
crates/futo-notes-ffi/tests/support/: mod.rs
crates/futo-notes-model/: Cargo.toml
crates/futo-notes-model/src/: crud.rs  filename.rs  image.rs  lib.rs  note.rs  tags.rs  wikilinks.rs
crates/futo-notes-model/tests/: conformance.rs  crud_parity.rs  relink.rs  scan_perf.rs
crates/futo-notes-search/: Cargo.toml
crates/futo-notes-search/examples/: search_eval.rs
crates/futo-notes-search/src/: indexer.rs  lib.rs  splade_scorer.rs  tantivy_indices.rs
crates/futo-notes-store/: Cargo.toml
crates/futo-notes-store/src/: lib.rs  paths.rs  tests.rs  vault.rs  vault_migration.rs
crates/futo-notes-sync/: Cargo.toml
crates/futo-notes-sync/examples/: peer_push.rs
crates/futo-notes-sync/src/: checkpoint.rs  client.rs  lib.rs  live.rs  orchestrator.rs  server.rs  session.rs  state.rs  sync.rs
crates/futo-notes-sync/src/session/: connect.rs  cycle.rs  event_stream.rs  mod.rs
crates/futo-notes-sync/src/session/live/: connected_stream.rs  mod.rs  runner.rs
crates/futo-notes-sync/src/sync/: behavior_tests.rs  collision_resolution.rs  conflict_resolution.rs  encrypted_note.rs  mod.rs  object_map.rs  outcome.rs  pull.rs  push.rs  tombstones.rs  vault.rs  vault_fs.rs
crates/futo-notes-sync/tests/: server_integration.rs  sse_live.rs
crates/futo-notes-sync/tests/common/: mod.rs
crates/stonefruit-inference/: Cargo.toml
crates/stonefruit-inference/examples/: embed_hello.rs
crates/stonefruit-inference/src/: embedder.rs  lib.rs
crates/stonefruit-inference/tests/: embedder.rs
crates/stonefruit-server/: AGENTS.md  Cargo.toml  Dockerfile  docker-compose.production.yml  docker-compose.yml
crates/stonefruit-server/src/: app.rs  db.rs  embedder.rs  error.rs  indexer.rs  lib.rs  main.rs  middleware.rs  password.rs  startup.rs  sync_engine.rs
crates/stonefruit-server/src/routes/: auth.rs  blob.rs  dashboard.html  dashboard.rs  graph.rs  health.rs  mod.rs  search.rs  sync.rs
crates/stonefruit-server/tests/: auth.rs  e2e_two_client.rs  golden_vaults.rs  proptest_sync.rs  routes.rs  sync.rs  sync_10k.rs
docs/: V2-MASTERPLAN.md  android-ime-renderer-crash-postmortem.md  android-native-setup.md  architecture-gates.md  automation-loop.md  codebase-review-2026-04-02.md  devlog.md  e2e-demo-checklist.md  e2ee-migration-todo.md  e2ee-sync-server.md  future-realtime-collab.md  ime-shield-workaround.md  internal-pitch.md  markdown-spec.md  sync.md  (+7 more)
(+1250 files in other folders)
