[workspace]
resolver = "2"
members = [
  "crates/futo-notes-core",
  "crates/futo-notes-inference",
  "crates/futo-notes-sync",
  "crates/futo-notes-model",
  "crates/futo-notes-ffi",
  "crates/futo-notes-search",
  "apps/tauri/src-tauri",
]

# Tighten release builds. `lto = "thin"` keeps link times tolerable while
# still letting LLVM see across crate boundaries; `codegen-units = 1` lets
# the optimizer reason about the whole crate; `panic = "abort"` removes
# the unwinding tables we'll never read. `strip = "debuginfo"` keeps the
# .deb/.rpm/.AppImage smaller without losing panic backtraces (kept by
# Rust's runtime). The Tauri Android/iOS builds inherit from this.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Dev profile: keep the default opt-level for our crates (faster compile),
# but bump optimization for dependencies so e.g. ort, sha2, rayon, regex
# are still fast in `just tauri-dev`. Saves seconds per keystroke when
# the search index or sync touches a hot dep.
[profile.dev.package."*"]
opt-level = 2

# Tantivy is the hottest dependency on the dev-profile FFI path (native-shell
# debug builds run the BM25 reconcile + queries through it), so bump it and
# its hot sub-crates from the blanket 2 up to full optimization.
[profile.dev.package.tantivy]
opt-level = 3
[profile.dev.package.tantivy-bitpacker]
opt-level = 3
[profile.dev.package.tantivy-columnar]
opt-level = 3
[profile.dev.package.tantivy-common]
opt-level = 3
[profile.dev.package.tantivy-fst]
opt-level = 3
[profile.dev.package.tantivy-query-grammar]
opt-level = 3
[profile.dev.package.tantivy-sstable]
opt-level = 3
[profile.dev.package.tantivy-stacker]
opt-level = 3
[profile.dev.package.tantivy-tokenizer-api]
opt-level = 3
