[workspace]
resolver = "2"
members = [
  "crates/futo-notes-core",
  "crates/futo-notes-sync",
  "crates/futo-notes-model",
  "crates/futo-notes-store",
  "crates/futo-notes-ffi",
  "crates/futo-notes-search",
  "apps/tauri/src-tauri",
]

# Tighten release builds. `lto = "thin"` keeps link times tolerable while
# still letting LLVM see across crate boundaries; `codegen-units = 1` lets
# the optimizer reason about the whole crate; `panic = "abort"` removes
# the unwinding tables we'll never read. `strip = "debuginfo"` keeps the
# .deb/.rpm/.AppImage smaller without losing panic backtraces (kept by
# Rust's runtime).
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Release profile for the UniFFI native-shell .so (futo-notes-ffi). Same
# optimization as `release`, but `panic = "unwind"` is REQUIRED: UniFFI wraps
# every exported function in `catch_unwind` to turn a Rust panic into a Kotlin/
# Swift exception. Under the parent profile's `panic = "abort"` a panic instead
# SIGABRTs the whole app, which is why the native build historically shipped the
# dev profile (unwind, but unoptimized + unstripped → 90–112 MB/ABI). This
# profile gives optimized libs while keeping panic-catching. Used by
# scripts/build-rust-android.sh (iOS uses the dev profile, so this profile is
# Android-only in practice).
#
# `strip` is deliberately NOT set here: we keep the symbol table so the Android
# Gradle build (debugSymbolLevel = "FULL") can extract a native-debug-symbols
# file into the Play AAB for crash/ANR symbolication. AGP still strips the .so
# that ships to devices, so on-device size stays small (~10–25 MB/ABI); the
# symbols travel to Play in a separate file, not to users.
[profile.release-ffi]
inherits = "release"
panic = "unwind"
strip = "none"

# Dev profile: keep the default opt-level for our crates (faster compile),
# but bump optimization for dependencies so e.g. sha2, rayon, regex, and
# Tantivy are still fast in `just tauri-dev`. Saves seconds per keystroke when
# the search index or sync touches a hot dep.
[profile.dev.package."*"]
opt-level = 2

# Tantivy is the hottest dependency on the dev-profile FFI path (native-shell
# debug builds run the BM25 reconcile + queries through it), so bump it and
# its hot sub-crates from the blanket 2 up to full optimization.
[profile.dev.package.tantivy]
opt-level = 3
[profile.dev.package.tantivy-bitpacker]
opt-level = 3
[profile.dev.package.tantivy-columnar]
opt-level = 3
[profile.dev.package.tantivy-common]
opt-level = 3
[profile.dev.package.tantivy-fst]
opt-level = 3
[profile.dev.package.tantivy-query-grammar]
opt-level = 3
[profile.dev.package.tantivy-sstable]
opt-level = 3
[profile.dev.package.tantivy-stacker]
opt-level = 3
[profile.dev.package.tantivy-tokenizer-api]
opt-level = 3
