[package]
name = "stonefruit-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stonefruit"
path = "src/main.rs"

[lints.clippy]
too_many_lines = "warn"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
