[package]
name = "futo-notes-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
filetime = "0.2"
diffy = "0.4"
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
thiserror = "1"
unicode-normalization = "0.1.25"

[dev-dependencies]
proptest = "1"
