[package]
name = "futo-notes-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "futo_notes_ffi"
# iOS XCFramework, Android shared library, and Rust metadata/bindgen consumers.
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

# Thin UniFFI projection over the model, store, and sync owners.
[dependencies]
# `tokio` enables `#[uniffi::export(async_runtime = "tokio")]`; `cli` provides
# `uniffi::uniffi_bindgen_main()` for the bundled bindgen binary. Pure
# proc-macro scaffolding via `uniffi::setup_scaffolding!()` — no .udl needed.
uniffi = { version = "0.28", features = ["tokio", "cli"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
futo-notes-model = { path = "../futo-notes-model" }
futo-notes-store = { path = "../futo-notes-store" }
futo-notes-sync = { path = "../futo-notes-sync" }
thiserror = "1"
