[package]
name = "futo-notes-model"
version = "0.1.0"
edition = "2021"

[lib]
name = "futo_notes_model"

# Pure note-domain decisions shared by the durable store and every shell.
[dependencies]
futo-notes-core = { path = "../futo-notes-core" }
serde = { version = "1", features = ["derive"] }
# `regex` lacks lookaround; the tag grammar (`tags.ts` TAG_REGEX) uses a
# lookbehind for whitespace-or-start and a lookahead for the terminator, so we
# need `fancy-regex` (already in the tree via the inference tokenizer).
fancy-regex = "0.14"

[dev-dependencies]
serde_json = "1"
