[package]
name = "futo-notes-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "futo_notes_search"

# Platform-agnostic on-device search engine: a Tantivy BM25 index with a
# background indexer.
# Knows nothing about Tauri / iOS / Android — it takes paths + a status
# callback and returns data. One engine shared by desktop (Tauri) and both
# native apps (via futo-notes-ffi).
[dependencies]
# Full-text engine.
tantivy = "0.26"

# Corpus walk for reconcile.
walkdir = "2.5"

# Background indexer: an mpsc channel from the filesystem watcher, debounce
# timers, and blocking Tantivy work off the async path.
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }

# Status structs.
serde = { version = "1", features = ["derive"] }
