[package]
name = "futo-notes-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "futo_notes_sync"

[dependencies]
futo-notes-core = { path = "../futo-notes-core" }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2.5"
time = { version = "0.3", features = ["parsing"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }
