[package]
name = "stonefruit-inference"
version = "0.1.0"
edition = "2021"
description = "On-device text embedding inference via ONNX Runtime for Stonefruit."
license = "MIT OR Apache-2.0"

[dependencies]
# ONNX Runtime bindings. We disable ort's own defaults and route every
# build-mode switch through our own feature flags so downstream consumers
# (Tauri, examples, tests) can pick load-dynamic-vs-download-binaries
# per-platform without ort feature surprises.
ort = { version = "2.0.0-rc.10", default-features = false, features = [
    "std",
    # `api-24` opts into the latest stable ONNX Runtime C API (v24). Matches
    # the default the ort crate would pick and keeps us in the supported
    # surface. Revisit if we target an older ORT release on a specific
    # platform.
    "api-24",
] }

# HuggingFace tokenizer. Default features bring in `onig` (C library) and
# `esaxx_fast` which we don't need for inference — disable and use the
# pure-Rust `fancy-regex` backend so mobile builds have no C deps here.
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

# Error plumbing.
thiserror = "2"

# For download manifests and eventual model metadata.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing for model-file integrity checks.
sha2 = "0.10"

# HTTP for model/tokenizer download. Match the Tauri app's reqwest features
# (blocking + rustls) for build-time dedup.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Optional logging — callers can enable a subscriber.
tracing = "0.1"

[features]
# Desktop default: ort downloads and statically links the matching
# libonnxruntime automatically during `cargo build`. The standalone
# `embed_hello` example relies on this, so it stays in `default`.
default = ["download-binaries"]

# Fetch prebuilt libonnxruntime at build time and statically link it into the
# final binary. Use this on desktop and for cross-compiles where a dynamic
# library is awkward to ship. Pulls in `tls-native` so ort-sys' build script
# can HTTPS-fetch the binaries.
download-binaries = ["ort/download-binaries", "ort/copy-dylibs", "ort/tls-native"]

# Load libonnxruntime at runtime from ORT_DYLIB_PATH or the platform library
# search path. Preferred on Android where the .so ships alongside the APK in
# `jniLibs/<abi>/`. Mutually exclusive with `download-binaries` — consumers
# using this feature must `default-features = false`.
load-dynamic = ["ort/load-dynamic"]

# Execution-provider feature flags. Enabled per-platform by consumers.
coreml = ["ort/coreml"]
xnnpack = ["ort/xnnpack"]

[[example]]
name = "embed_hello"
path = "examples/embed_hello.rs"
