[package]
name = "stonefruit-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "stonefruit_server"
path = "src/lib.rs"

[[bin]]
name = "stonefruit-server"
path = "src/main.rs"

[dependencies]
stonefruit-core = { path = "../stonefruit-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
rusqlite = { version = "0.33", features = ["bundled"] }
sqlite-vec = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
proptest = "1"
