[package]
name = "futo-notes-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "futo_notes_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "futo-notes-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
futo-notes-core = { path = "../../../crates/futo-notes-core" }
# Shared E2EE sync orchestrator + state + SSE live loop. The desktop sync
# commands are thin wrappers that delegate to this crate (same source of
# truth as the native iOS/Android shells via futo-notes-ffi).
futo-notes-sync = { path = "../../../crates/futo-notes-sync" }
# The canonical note rules (filename/tag/title) + note CRUD. Exposed as
# #[tauri::command] wrappers so desktop consumes the SAME Rust as native.
futo-notes-model = { path = "../../../crates/futo-notes-model" }
# Platform-agnostic on-device BM25 search engine. Thin Tauri shim in
# src/search.rs over this.
futo-notes-search = { path = "../../../crates/futo-notes-search" }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.11.0"
sha2 = "0.10.9"
filetime = "0.2.26"
time = { version = "0.3", features = ["formatting"] }
notify = "8.2.0"
walkdir = "2.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
png = "0.17"
libc = "0.2"
tauri-plugin-mcp-bridge = "0.10.0"
url = "2.5"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }

# Route folder/note deletes through the desktop system trash so users can
# recover from accidental deletes.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
trash = "5"
# In-app self-updater (desktop only — not supported on iOS/Android, which ship
# native via the App Store / sideload). Checks a signed JSON manifest, verifies
# the minisign signature against the pubkey in tauri.conf.json, downloads the
# matching bundle for this OS/arch, swaps it, and relaunches via plugin-process.
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-single-instance = "2"
glib = "0.18"

[lints.clippy]
too_many_lines = "warn"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
