[package]
name = "futo-notes-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "futo_notes_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "futo-notes-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
futo-notes-core = { path = "../../../crates/futo-notes-core" }
# Shared E2EE sync session + state + SSE live loop. The desktop sync
# commands are thin wrappers that delegate to this crate (same source of
# truth as the native iOS/Android shells via futo-notes-ffi).
futo-notes-sync = { path = "../../../crates/futo-notes-sync" }
# The durable local-note owner, including the derived BM25 index.
futo-notes-store = { path = "../../../crates/futo-notes-store" }
time = { version = "0.3", features = ["formatting"] }
notify = "8.2.0"
png = "0.17"
libc = "0.2"
tauri-plugin-mcp-bridge = "0.10.0"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }

# OS secret store for the E2EE vault password (F6) lives in the per-OS target
# tables below. Desktop-only, and deliberately NOT in the portable crates —
# the note domain must stay free of platform secret-store deps (CI
# test:rust:dep-guard). Each OS pulls only its own native backend so no
# D-Bus/Secret-Service code compiles on macOS/Windows.

# Route folder/note deletes through the desktop system trash so users can
# recover from accidental deletes.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
trash = "5"
# In-app self-updater (desktop only — not supported on iOS/Android, which ship
# native via the App Store / sideload). Checks a signed JSON manifest, verifies
# the minisign signature against the pubkey in tauri.conf.json, downloads the
# matching bundle for this OS/arch, swaps it, and relaunches via plugin-process.
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-single-instance = "2"
glib = "0.18"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[lints.clippy]
too_many_lines = "warn"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
